# DM3

./: .env.example  .gitignore  .zenodo.json  ARTEFACT_BUNDLE.md  ARTEFACT_BUNDLE_REGISTER.tsv  CHANGELOG.md  CHARACTERIZATION_REPORT.md  CITATION.cff  CLAIMS.md  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  IS_AND_IS_NOT.md  LICENSE  Makefile  README.md  RECONSTRUCTION_TIER2_NOTE.md  REPO_AGENT_FINDINGS.md  RETRACTIONS.md  SECURITY.md  TRADEMARK.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.gpd/: CONVENTIONS.md  DECISIONS.md  NOTATION_GLOSSARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  project_contract_seed.json  state.json  state.json.bak
artifacts/: classify_basins.py  classify_intra_session.py  phase_B_summary.json  phase_D_summary.json  phase_E_summary.json  phase_F_summary.json  phase_H_summary.json  phase_I_summary.json  phase_J.cfg  phase_J_summary.json  phase_K_summary.json  phase_L_summary.json  phase_M.cfg  phase_M_summary.json  phase_N1.cfg  phase_N_summary.json  phase_runner.sh
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/checks/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/checks/src/: lib.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/deq_core/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/deq_core/src/: lib.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/dual_cli/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/dual_cli/src/: main.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/dynamics_deq/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/dynamics_deq/src/: lib.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/geometry_core/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/geometry_core/src/: lib.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/invariants/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/invariants/src/: lib.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/io_cli/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/io_cli/src/: main.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/lift_3d/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/lift_3d/src/: lib.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/pipeline_cpu/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/pipeline_cpu/src/: geometry_phase.rs  hash_utils.rs  main.rs  raw_exports.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/proof_gates/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/proof_gates/src/: cad_sos.rs  lib.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/snic_tests/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/snic_tests/src/: lib.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/snic_tests/tests/: core_invariants.rs  lift_bigrat.rs
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/yantra_2d/: Cargo.toml
artifacts/phase_01_2_3_4_1_1_rescue_pack_20260405T202422Z/device_snapshot/f1_workspace/workspace/crates/yantra_2d/src/: lib.rs
briefing-pack-dm3-rm10-bridge-phase-01-2-3-2-10doc-20260405/: 000_START_HERE__RM10_BRIDGE_PHASE_GUIDE.md  010_EXECUTIVE__RM10_BRIDGE_PHASE_BRANCH_VERDICT.md  020_SYSTEM__RM10_DEVICE_ENGINEERING_AND_CURRENT_FAMILY_MAP.md  030_HISTORY__MINED_CLUES_AND_BRANCH_BOUNDARIES.md  040_GOVERNANCE__RUN_RULES_BRIDGE_LIMITS_AND_STOPPING_CRITERIA.md  050_BATTERIES__SCIENCE_ROWS_AND_CURRENT_EXECUTION_BOUNDARY.md  060_RESULTS__F1_ANCHOR_F2_REPEATABILITY_AND_NPU_TRIAGE.md  070_RESULTS__HETEROGENEOUS_STATUS_AND_HYPOTHESIS_STANDING.md  080_NEXT__ENGINEERING_MOVE_AND_DECISION_ROUTE.md  090_EVIDENCE__ARTIFACT_AND_COMMAND_INDEX.md
briefing-pack-dm3-rm10-primary-platform-10doc-20260405/: 000_START_HERE__RM10_PRIMARY_PLATFORM_BRANCH_GUIDE.md  010_EXECUTIVE__RM10_PRIMARY_PLATFORM_BRANCH_VERDICT.md  020_SYSTEM__RM10_DEVICE_ENGINEERING_AND_RUN_SURFACES.md  030_HISTORY__MINED_CLUES_OBSERVABLES_AND_FAILURES.md  040_GOVERNANCE__RUN_RULES_AND_STOPPING_CRITERIA.md  050_BATTERIES__BOUNDARY_SPECTRAL_TOPOLOGY_RECIPROCITY_PERSISTENCE.md  060_RESULTS__RM10_CPU_GPU_NPU_HETERO_FIRST_PASS.md  070_RESULTS__HETEROGENEOUS_COMPUTE_AND_HYPOTHESIS_VERDICTS.md  080_NEXT__ENGINEERING_PRIORITY_AND_BRANCH_ROUTE.md  090_EVIDENCE__ARTIFACT_AND_COMMAND_INDEX.md
briefing-pack-dm3-rm10-readiness-thread-handoff-20260405/: 000_START_HERE__READINESS_REPORT.md  010_EXECUTIVE__WHAT_WAS_ACHIEVED.md  020_ACTIONS__WHAT_WAS_DONE_IN_THIS_THREAD.md  030_STATUS__WHAT_IS_READY_AND_WHAT_IS_NOT.md  040_OUTSTANDING__OPEN_ITEMS_AND_RISKS.md  050_ADVICE__RECOMMENDED_TEAM_ROUTE.md  060_EVIDENCE__KEY_PATHS_AND_ARTIFACTS.md
briefing-pack-dm3-science-engineering-phase-01-2-3-closeout-10doc-20260404/: 060_STATE__CURRENT_STATE_AND_BLOCKERS.md  (+8 more)
(+3738 files in other folders)
