[package]
name = "invariants"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde.workspace = true
num-rational.workspace = true
serde_json.workspace = true
thiserror = "1"
anyhow.workspace = true
colored.workspace = true
geometry_core = { path = "../geometry_core" }
yantra_2d = { path = "../yantra_2d" }
petgraph.workspace = true
itertools.workspace = true

[dev-dependencies]
serde_json.workspace = true
