[package]
name = "io_cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
anyhow.workspace = true
colored.workspace = true
clap.workspace = true
walkdir.workspace = true
glob.workspace = true
sha2.workspace = true
blake3.workspace = true
chrono.workspace = true
invariants = { path = "../invariants" }
proof_gates = { path = "../proof_gates" }
dynamics_deq = { path = "../dynamics_deq" }
yantra_2d = { path = "../yantra_2d" }
lift_3d = { path = "../lift_3d" }
geometry_core = { path = "../geometry_core" }

[[bin]]
name = "snic_rust"
path = "src/main.rs"
