[package]
name = "pipeline_cpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
lift_3d = { path = "../lift_3d" }
yantra_3d_dual = { path = "../yantra_3d_dual" }
deq_core = { path = "../deq_core" }
resonance_cpu = { path = "../resonance_cpu" }
checks = { path = "../checks" }
walkdir.workspace = true
sha2.workspace = true
chrono.workspace = true
