[package]
name = "proof_gates"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
anyhow.workspace = true
colored.workspace = true
egg.workspace = true
invariants = { path = "../invariants" }
geometry_core = { path = "../geometry_core" }
yantra_2d = { path = "../yantra_2d" }
lift_3d = { path = "../lift_3d" }
num-rational.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
serde_json.workspace = true
