[package]
name = "snic_tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
lift_3d = { path = "../lift_3d" }
yantra_2d = { path = "../yantra_2d" }
serde_json = "1"
invariants = { path = "../invariants" }
proof_gates = { path = "../proof_gates" }
dynamics_deq = { path = "../dynamics_deq" }
